Add Profile, and Update some source code

--- a/app/src/main/res/layout/activity_connection_error.xml
+++ b/app/src/main/res/layout/activity_connection_error.xml
@@ -5,13 +5,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
-    tools:context=".ui.ConnectionErrorActivity">
+    android:padding="@dimen/padding_default"
+    tools:context=".ui.module.ConnectionErrorActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lt_error"
-        android:layout_width="300dp"
-        android:layout_height="200dp"
+        android:layout_width="@dimen/image_width_rectangular_default"
+        android:layout_height="@dimen/image_height_rectangular_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -27,7 +27,7 @@
         android:id="@+id/tv_title_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/margin_half_default"
         android:fontFamily="@font/open_sans_bold"
         android:gravity="center"
         android:text="@string/title"
@@ -42,7 +42,7 @@
         android:id="@+id/tv_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/margin_default"
         android:text="@string/title"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,8 +56,8 @@
         android:id="@+id/btn_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:paddingHorizontal="50dp"
+        android:layout_marginTop="@dimen/margin_default"
+        android:paddingHorizontal="@dimen/padding_multiple_min_half_default"
         android:text="@string/back"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
