--- a/app/src/main/res/drawable/button_primary_ripple_white.xml
+++ b/app/src/main/res/drawable/button_primary_ripple_white.xml
@@ -5,7 +5,7 @@
     <item android:id="@+id/mask">
         <shape android:shape="rectangle">
             <solid android:color="@color/primary"/>
-            <corners android:radius="10dp"/>
+            <corners android:radius="@dimen/round_default"/>
         </shape>
     </item>
 </ripple>
