--- a/app/src/main/res/drawable/button_secondary_ripple_primary.xml
+++ b/app/src/main/res/drawable/button_secondary_ripple_primary.xml
@@ -4,8 +4,8 @@
     android:color="@color/primary">
     <item android:id="@+id/mask">
         <shape android:shape="rectangle">
-            <solid android:color="@color/light_blue"/>
-            <corners android:radius="10dp"/>
+            <solid android:color="@color/secondary"/>
+            <corners android:radius="@dimen/round_default"/>
         </shape>
     </item>
 </ripple>
