--- a/app/src/main/res/drawable/frame_text_input_layout_inner.xml
+++ b/app/src/main/res/drawable/frame_text_input_layout_inner.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@android:color/transparent"/>
-    <corners android:radius="10dp"/>
+    <corners android:radius="@dimen/round_default"/>
     <padding android:top="10dp" android:left="5dp" android:right="5dp" android:bottom="10dp"/>
 </shape>
