--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="@color/primary"
-    tools:context=".ui.splash.SplashScreenActivity" >
+    tools:context=".ui.module.splash.SplashScreenActivity" >
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lt_loading"
