--- a/app/src/main/res/drawable/frame_text_input_layout_inner.xml
+++ b/app/src/main/res/drawable/frame_text_input_layout_inner.xml
@@ -3,5 +3,9 @@
     android:shape="rectangle">
     <solid android:color="@android:color/transparent"/>
     <corners android:radius="@dimen/round_default"/>
-    <padding android:top="10dp" android:left="5dp" android:right="5dp" android:bottom="10dp"/>
+    <padding
+        android:top="@dimen/padding_half_default"
+        android:left="@dimen/padding_half_half_default"
+        android:right="@dimen/padding_half_half_default"
+        android:bottom="@dimen/padding_half_default"/>
 </shape>
