--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:padding="@dimen/padding_default"
     tools:context=".ui.module.login.LoginActivity">
 
     <TextView
@@ -24,16 +26,16 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lt_login"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="@dimen/image_width_rectangular_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.275"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:lottie_autoPlay="true"
+        app:lottie_autoPlay="false"
         app:lottie_fileName="login.json"
-        app:lottie_loop="true"
+        app:lottie_loop="false"
         app:lottie_speed="1.5" />
 
     <TextView
@@ -42,7 +44,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/open_sans_bold"
         android:text="@string/app_name"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_big"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/lt_login"
         app:layout_constraintHorizontal_bias="0.497"
@@ -56,7 +58,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/open_sans_bold"
         android:text="@string/label_login"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_biggest"
         app:layout_constraintEnd_toEndOf="@+id/lt_login"
         app:layout_constraintStart_toStartOf="@+id/lt_login"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -65,9 +67,9 @@
         android:id="@+id/til_username_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="@dimen/margin_half_default"
+        android:layout_marginTop="@dimen/margin_half_default"
+        android:layout_marginEnd="@dimen/margin_half_default"
         android:background="@drawable/frame_text_input_layout"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
@@ -80,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/frame_text_input_layout_inner"
-            android:hint="@string/label_username_login"
+            android:hint="@string/label_username"
             android:inputType="textEmailAddress"
             android:singleLine="true"
             app:boxStrokeWidth="0dp"
@@ -92,7 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_secondary_ripple_primary"
-        android:padding="15dp"
+        android:padding="@dimen/padding_half_half_add_half_default"
         app:layout_constraintBottom_toBottomOf="@+id/til_password_login"
         app:layout_constraintEnd_toEndOf="@+id/til_username_login"
         app:layout_constraintTop_toTopOf="@+id/til_password_login"
@@ -103,8 +105,8 @@
         android:id="@+id/til_password_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginTop="@dimen/margin_half_default"
+        android:layout_marginEnd="@dimen/margin_half_default"
         android:background="@drawable/frame_text_input_layout"
         app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="0dp"
@@ -118,7 +120,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/frame_text_input_layout_inner"
-            android:hint="@string/label_password_login"
+            android:hint="@string/label_password"
             android:inputType="textPassword"
             android:singleLine="true"
             app:boxStrokeWidth="0dp"
@@ -129,9 +131,9 @@
         android:id="@+id/btn_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/margin_default"
         android:text="@string/label_login"
-        app:cornerRadius="10dp"
+        app:cornerRadius="@dimen/round_default"
         app:layout_constraintEnd_toEndOf="@+id/ib_show_password_login"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/til_password_login"
@@ -143,7 +145,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/cancel"
-        app:cornerRadius="10dp"
+        app:cornerRadius="@dimen/round_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btn_login"
         app:layout_constraintHorizontal_bias="1.0"
