--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,14 +5,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
+    android:padding="@dimen/padding_default"
     android:background="@color/primary"
     tools:context=".ui.module.splash.SplashScreenActivity" >
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lt_loading"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="@dimen/image_square_biggest_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -28,12 +28,12 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="@dimen/margin_half_default"
+        android:layout_marginEnd="@dimen/margin_half_default"
         android:fontFamily="@font/open_sans_bold"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="@dimen/text_biggest"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/lt_loading"
         app:layout_constraintHorizontal_bias="0.496"
@@ -49,7 +49,7 @@
         android:gravity="center"
         android:text="@string/message_loading_splash"
         android:textColor="@color/white"
-        android:textSize="12sp"
+        android:textSize="@dimen/text_small"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
