--- a/app/src/main/res/layout/app_bar.xml
+++ b/app/src/main/res/layout/app_bar.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp">
+    android:paddingHorizontal="@dimen/padding_default"
+    android:paddingVertical="@dimen/padding_half_default">
 
     <ImageView
         android:id="@+id/iv_icon_app_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/frame_background_secondary"
-        android:padding="10dp"
+        android:padding="@dimen/padding_half_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -25,9 +25,9 @@
         android:id="@+id/tv_title_app_bar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="@dimen/margin_half_default"
         android:text="@string/title"
-        android:textSize="18sp"
+        android:textSize="@dimen/text_big"
         app:layout_constraintBottom_toBottomOf="@+id/iv_icon_app_bar"
         app:layout_constraintEnd_toStartOf="@+id/iv_btn_right_app_bar"
         app:layout_constraintStart_toEndOf="@+id/iv_icon_app_bar"
@@ -40,7 +40,7 @@
         android:clickable="true"
         android:focusable="true"
         android:background="@drawable/frame_background_secondary"
-        android:padding="10dp"
+        android:padding="@dimen/padding_half_default"
         app:layout_constraintBottom_toBottomOf="@+id/iv_icon_app_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
