--- a/app/src/main/res/layout/created_and_update.xml
+++ b/app/src/main/res/layout/created_and_update.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="@dimen/padding_default">
 
     <TextView
         android:id="@+id/tv_created"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:padding="10dp"
+        android:layout_marginBottom="@dimen/margin_half_half_default"
+        android:padding="@dimen/margin_half_default"
         android:background="@drawable/frame_background_light_gray_shimmer"
         android:text="@string/title" />
 
@@ -19,8 +18,8 @@
         android:id="@+id/tv_updated"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:padding="10dp"
+        android:layout_marginTop="@dimen/margin_half_half_default"
+        android:padding="@dimen/margin_half_default"
         android:background="@drawable/frame_background_light_gray_shimmer"
         android:text="@string/title" />
 </LinearLayout>
