--- a/app/src/main/res/layout/detail_admin.xml
+++ b/app/src/main/res/layout/detail_admin.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -10,7 +9,7 @@
         android:id="@+id/tv_admin_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="@dimen/margin_half_default"
         android:text="@string/title"
         app:layout_constraintBottom_toBottomOf="@+id/iv_btn_edit_admin_name"
         app:layout_constraintEnd_toStartOf="@+id/iv_btn_edit_admin_name"
@@ -22,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/button_secondary_ripple_primary"
-        android:padding="5dp"
+        android:padding="@dimen/padding_half_half_default"
         android:clickable="true"
         android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,8 +37,8 @@
         android:id="@+id/tv_email_admin_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:drawablePadding="5dp"
+        android:layout_marginTop="@dimen/margin_half_half_default"
+        android:drawablePadding="@dimen/padding_half_half_default"
         android:gravity="start|center"
         android:text="@string/title"
         app:drawableStartCompat="@drawable/ic_round_email_24"
@@ -53,9 +52,9 @@
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/margin_half_default"
         android:text="@string/label_change_password"
-        app:cornerRadius="10dp"
+        app:cornerRadius="@dimen/round_default"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/iv_btn_edit_admin_name"
         app:layout_constraintHorizontal_bias="1.0"
