--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -3,14 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp"
+    android:padding="@dimen/padding_default"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:paddingVertical="20dp"
+        android:layout_marginTop="@dimen/margin_multiple_add_default"
+        android:paddingVertical="@dimen/padding_default"
         android:background="@drawable/frame_background_white"
         android:orientation="vertical">
 
@@ -18,10 +18,10 @@
             android:id="@+id/tv_title_notification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="@dimen/margin_multiple_default"
+            android:layout_marginHorizontal="@dimen/margin_default"
             android:fontFamily="@font/open_sans_bold"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_big"
             android:gravity="center"
             android:text="@string/title" />
 
@@ -29,8 +29,8 @@
             android:id="@+id/tv_notification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="@dimen/margin_half_default"
+            android:layout_marginHorizontal="@dimen/margin_default"
             android:gravity="center"
             android:text="@string/title" />
 
@@ -38,16 +38,16 @@
             android:id="@+id/btn_notification"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="@dimen/margin_default"
+            android:layout_marginHorizontal="@dimen/margin_default"
             android:text="@string/title"
-            app:cornerRadius="10dp" />
+            app:cornerRadius="@dimen/round_default" />
     </LinearLayout>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lt_notification"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/image_square_multiple_default"
+        android:layout_height="@dimen/image_square_multiple_default"
         android:layout_gravity="top|center"
         app:lottie_autoPlay="true"
         app:lottie_fileName="warning.json"
