--- a/app/src/main/res/layout/option.xml
+++ b/app/src/main/res/layout/option.xml
@@ -2,14 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dp"
+    android:padding="@dimen/padding_default"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:paddingVertical="20dp"
+        android:layout_marginTop="@dimen/margin_multiple_add_default"
+        android:paddingVertical="@dimen/padding_default"
         android:background="@drawable/frame_background_white"
         android:orientation="vertical">
 
@@ -17,24 +17,24 @@
             android:id="@+id/tv_title_option"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="@dimen/margin_multiple_default"
+            android:layout_marginHorizontal="@dimen/margin_default"
             android:fontFamily="@font/open_sans_bold"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_big"
             android:text="@string/title" />
 
         <TextView
             android:id="@+id/tv_message_option"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="@dimen/margin_half_default"
+            android:layout_marginHorizontal="@dimen/margin_default"
             android:text="@string/title" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/margin_default"
             android:gravity="end"
             android:orientation="horizontal">
 
@@ -43,27 +43,27 @@
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginStart="@dimen/margin_default"
+                android:layout_marginEnd="@dimen/margin_half_half_default"
                 android:text="@string/title"
-                app:cornerRadius="10dp" />
+                app:cornerRadius="@dimen/round_default" />
 
             <Button
                 android:id="@+id/btn_positive"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="20dp"
+                android:layout_marginStart="@dimen/margin_half_half_default"
+                android:layout_marginEnd="@dimen/margin_default"
                 android:text="@string/title"
-                app:cornerRadius="10dp" />
+                app:cornerRadius="@dimen/round_default" />
         </LinearLayout>
     </LinearLayout>
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lt_option"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginEnd="10dp"
+        android:layout_width="@dimen/image_square_multiple_default"
+        android:layout_height="@dimen/image_square_multiple_default"
+        android:layout_marginEnd="@dimen/margin_half_default"
         android:layout_gravity="top|end"
         app:lottie_autoPlay="true"
         app:lottie_fileName="warning.json"
