--- a/app/src/main/res/values/dimension.xml
+++ b/app/src/main/res/values/dimension.xml
@@ -3,16 +3,27 @@
     <dimen name="padding_default">20dp</dimen>
     <dimen name="padding_half_default">10dp</dimen>
     <dimen name="padding_half_half_default">5dp</dimen>
+    <dimen name="padding_half_half_add_default">8dp</dimen>
+    <dimen name="padding_smallest_default">2dp</dimen>
+    <dimen name="padding_half_half_add_half_default">15dp</dimen>
     <dimen name="padding_multiple_default">40dp</dimen>
     <dimen name="padding_multiple_min_half_default">50dp</dimen>
 
     <dimen name="margin_default">20dp</dimen>
     <dimen name="margin_half_default">10dp</dimen>
+    <dimen name="margin_half_half_default">5dp</dimen>
+    <dimen name="margin_multiple_default">40dp</dimen>
+    <dimen name="margin_multiple_add_default">50dp</dimen>
 
     <dimen name="image_width_rectangular_default">300dp</dimen>
     <dimen name="image_height_rectangular_default">200dp</dimen>
+    <dimen name="image_square_biggest_default">500dp</dimen>
     <dimen name="image_square_default">50dp</dimen>
+    <dimen name="image_square_min_default">40dp</dimen>
     <dimen name="image_square_add_default">60dp</dimen>
+    <dimen name="image_square_multiple_default">100dp</dimen>
+    <dimen name="image_square_multiple_add_default">120dp</dimen>
+    <dimen name="image_square_multiple_multiple_default">200dp</dimen>
 
     <dimen name="round_default">5dp</dimen>
     <dimen name="round_multiple_default">10dp</dimen>
